NIAD-3144 - Send over {Lab Results}.meta.security NOPAT field to incumbent (#828)
* [NIAD-3144] Create TestUtility.java and create method to parse a given JSON file into a FHIR resource

* [NIAD-3144] Update TestUtility.java and update DiagnosticReportMapperTest.java, added two boilerplate tests

* [NIAD-3144] Add failing unit test

* [NIAD-3144] Update tests to support confidentialityService, added failing unit tests

* [NIAD-3144] Add more utility methods to TestUtility.java

* [NIAD-3144] Add and remove test resources

* [NIAD-3144] Update production code for DiagnosticReportMapper

* [NIAD-3144] Improve test assertions

* [NIAD-3144] Checkstyle violations fixed, enhance SpecimenMapperTest.java

* [NIAD-3144] Add failing unit test

* [NIAD-3144] Add logic to production code to for confidentialityCode support of specimens

* [NIAD-3144] Test refactors

* [NIAD-3144] TestUtility refactors

* [NIAD-3144] Add test coverage to SpecimenMapperTest.java

* [NIAD-3144] Refactor code to abide to single responsibility principle

* [NIAD-3144] Address failing unit test

* [NIAD-3144] Address failing unit test